fixed x overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,6 @@
 @layer base {
   body {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    @apply w-screen;
   }
   ::view-transition-new(root) {
     mask: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40"><circle cx="20" cy="20" r="20" fill="white"/></svg>')
